--- a/src/styles.css
+++ b/src/styles.css
@@ -35,16 +35,16 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  background: white;
   cursor: pointer;
 }
-
-
 
 .playerred,
 .playeryellow {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  border: 0.1px solid black;
   position: absolute;
   transition: all 0.2s ease-in-out;
 }
